--- a/importer/importer.csproj
+++ b/importer/importer.csproj
@@ -6,6 +6,7 @@
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.8.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
+    <PackageReference Include="NEST" Version="6.2.0" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="data\csv\.gitkeep" />
