--- a/models/models.csproj
+++ b/models/models.csproj
@@ -2,4 +2,12 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <Reference Include="Elasticsearch.Net, Version=6.0.0.0, Culture=neutral, PublicKeyToken=96c599bbe3e70f5d">
+      <HintPath>..\..\..\..\..\Users\jeremyro\.nuget\packages\elasticsearch.net\6.2.0\lib\netstandard1.3\Elasticsearch.Net.dll</HintPath>
+    </Reference>
+    <Reference Include="Nest, Version=6.0.0.0, Culture=neutral, PublicKeyToken=96c599bbe3e70f5d">
+      <HintPath>..\..\..\..\..\Users\jeremyro\.nuget\packages\nest\6.2.0\lib\netstandard1.3\Nest.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
