--- a/models/models.csproj
+++ b/models/models.csproj
@@ -10,4 +10,7 @@
       <HintPath>..\..\..\..\..\Users\jeremyro\.nuget\packages\nest\6.2.0\lib\netstandard1.3\Nest.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="NEST" Version="6.2.0" />
+  </ItemGroup>
 </Project>
